objects/blng__LegalEntity__c.object
<CustomObject>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Changing from Active to Inactive will not affect existing transactions or assignments.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__City__c</fullName>
        <inlineHelpText>City Name</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Country__c</fullName>
        <inlineHelpText>Country Name</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__County__c</fullName>
        <inlineHelpText>County Name</inlineHelpText>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntityNumber__c</fullName>
        <displayFormat>LE-{00000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>System generated. A unique number for this Legal Entity record.</inlineHelpText>
        <label>Legal Entity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__State__c</fullName>
        <inlineHelpText>State Name</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Street1__c</fullName>
        <inlineHelpText>Primary Street Address</inlineHelpText>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Street2__c</fullName>
        <inlineHelpText>Secondary Street Address</inlineHelpText>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ZipPostalCode__c</fullName>
        <inlineHelpText>ZIP or Postal Code</inlineHelpText>
        <label>Zip / Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Legal Entity</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>